crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// A decoded SHT3x temperature and humidity pair.
typedef struct {
  // The raw temperature word.
  uint16_t temperature_raw;
  // The raw humidity word.
  uint16_t humidity_raw;
  // The temperature in milli-degrees Celsius, exact in integer arithmetic.
  int32_t milli_celsius;
  // The temperature in degrees Celsius.
  float celsius;
  // The temperature in milli-degrees Fahrenheit.
  int32_t milli_fahrenheit;
  // The temperature in degrees Fahrenheit.
  float fahrenheit;
  // The relative humidity in milli-percent.
  uint32_t milli_percent;
  // The relative humidity as a percentage.
  float relative_humidity;
} PamojaSht3xMeasurement;
// A decoded SHT3x status register.
typedef struct {
  // The 16-bit status word the flags were read from.
  uint16_t bits;
  // `1` when at least one alert condition is pending.
  uint8_t alert_pending;
  // `1` while the on-die heater is running.
  uint8_t heater_on;
  // `1` when a humidity tracking alert is set.
  uint8_t humidity_tracking_alert;
  // `1` when a temperature tracking alert is set.
  uint8_t temperature_tracking_alert;
  // `1` when the part has reset since the flag was last cleared.
  uint8_t reset_detected;
  // `1` when the last command could not be processed.
  uint8_t command_failed;
  // `1` when the last write failed its checksum.
  uint8_t write_checksum_failed;
} PamojaSht3xStatus;
// Reads a CRC-checked three-byte SHT3x word frame.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_word` set, or
// [`PamojaStatus::Codec`] if the CRC does not match.
//
// # Safety
//
// `frame` must point to at least `frame_len` readable bytes, and `out_word` must
// point to a writable `uint16_t`.
PamojaStatus pamoja_sht3x_word(const uint8_t *frame, uintptr_t frame_len, uint16_t *out_word);
// Builds the three bytes an SHT3x sends for a word: the word then its CRC.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the three bytes written to `out_bytes`,
// or [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least three writable bytes.
PamojaStatus pamoja_sht3x_word_bytes(uint16_t value, uint8_t *out_bytes);
// Parses and CRC-checks a six-byte SHT3x measurement frame.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_measurement` filled in, or
// [`PamojaStatus::Codec`] if either word fails its checksum, which means the read
// was corrupted on the bus and should be repeated.
//
// # Safety
//
// `frame` must point to at least `frame_len` readable bytes, and
// `out_measurement` must point to a writable `PamojaSht3xMeasurement`.
PamojaStatus pamoja_sht3x_parse_measurement(const uint8_t *frame,
                                            uintptr_t frame_len,
                                            PamojaSht3xMeasurement *out_measurement);
// Builds the six bytes an SHT3x sends for a pair of raw words.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the six bytes written to `out_bytes`, or
// [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least six writable bytes.
PamojaStatus pamoja_sht3x_measurement_bytes(uint16_t temperature_raw,
                                            uint16_t humidity_raw,
                                            uint8_t *out_bytes);
// Converts a raw SHT3x temperature word to milli-degrees Celsius.
//
// # Returns
//
// The temperature, exact in integer arithmetic.
int32_t pamoja_sht3x_milli_celsius(uint16_t raw);
// Converts a raw SHT3x temperature word to degrees Celsius.
//
// # Returns
//
// The temperature.
float pamoja_sht3x_celsius(uint16_t raw);
// Converts a raw SHT3x temperature word to milli-degrees Fahrenheit.
//
// # Returns
//
// The temperature, exact in integer arithmetic.
int32_t pamoja_sht3x_milli_fahrenheit(uint16_t raw);
// Converts a raw SHT3x temperature word to degrees Fahrenheit.
//
// # Returns
//
// The temperature.
float pamoja_sht3x_fahrenheit(uint16_t raw);
// Converts a raw SHT3x humidity word to milli-percent.
//
// # Returns
//
// The relative humidity, exact in integer arithmetic.
uint32_t pamoja_sht3x_milli_percent(uint16_t raw);
// Converts a raw SHT3x humidity word to a relative humidity percentage.
//
// # Returns
//
// The relative humidity.
float pamoja_sht3x_relative_humidity(uint16_t raw);
// Builds the SHT3x temperature word that decodes to a temperature.
//
// # Returns
//
// The raw word, saturating at the ends of the part's range.
uint16_t pamoja_sht3x_temperature_raw_from_milli_celsius(int32_t milli_celsius);
// Builds the SHT3x temperature word that decodes to a temperature in Celsius.
//
// # Returns
//
// The raw word, saturating at the ends of the part's range.
uint16_t pamoja_sht3x_temperature_raw_from_celsius(float celsius);
// Builds the SHT3x temperature word that decodes to a temperature in Fahrenheit.
//
// # Returns
//
// The raw word, saturating at the ends of the part's range.
uint16_t pamoja_sht3x_temperature_raw_from_milli_fahrenheit(int32_t milli_fahrenheit);
// Builds the SHT3x humidity word that decodes to a relative humidity.
//
// # Returns
//
// The raw word, saturating at full scale.
uint16_t pamoja_sht3x_humidity_raw_from_milli_percent(uint32_t milli_percent);
// Builds the SHT3x humidity word that decodes to a relative humidity percentage.
//
// # Returns
//
// The raw word, saturating at full scale.
uint16_t pamoja_sht3x_humidity_raw_from_relative_humidity(float percent);
// Parses and CRC-checks a three-byte SHT3x status frame.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_status` filled in, or
// [`PamojaStatus::Codec`] if the CRC does not match.
//
// # Safety
//
// `frame` must point to at least `frame_len` readable bytes, and `out_status`
// must point to a writable `PamojaSht3xStatus`.
PamojaStatus pamoja_sht3x_parse_status(const uint8_t *frame,
                                       uintptr_t frame_len,
                                       PamojaSht3xStatus *out_status);
// Splits an SHT3x status word into its flags.
//
// # Returns
//
// [`PamojaStatus::Ok`], with `*out_status` filled in. Every word decodes, so
// this fails only on a null pointer.
//
// # Safety
//
// `out_status` must point to a writable `PamojaSht3xStatus`.
PamojaStatus pamoja_sht3x_status_from_bits(uint16_t bits, PamojaSht3xStatus *out_status);
// Builds the three bytes an SHT3x sends for a status word, CRC last.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the three bytes written to `out_bytes`,
// or [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least three writable bytes.
PamojaStatus pamoja_sht3x_status_bytes(uint16_t bits, uint8_t *out_bytes);
// Returns the SHT3x single-shot command for a repeatability and clock mode.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_command` set, or
// [`PamojaStatus::InvalidArgument`] if `repeatability` is not 0, 1, or 2.
//
// # Safety
//
// `out_command` must point to a writable `uint16_t`.
PamojaStatus pamoja_sht3x_single_shot(uint8_t repeatability,
                                      bool clock_stretching,
                                      uint16_t *out_command);
// Returns the SHT3x periodic-mode command for a repeatability and rate.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_command` set, or
// [`PamojaStatus::InvalidArgument`] if either code is outside its range.
//
// # Safety
//
// `out_command` must point to a writable `uint16_t`.
PamojaStatus pamoja_sht3x_periodic(uint8_t repeatability, uint8_t rate, uint16_t *out_command);
// Returns how long an SHT3x measurement may take at a repeatability.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_micros` set to the datasheet's
// worst case, or [`PamojaStatus::InvalidArgument`] if the code is out of range.
//
// # Safety
//
// `out_micros` must point to a writable `uint32_t`.
PamojaStatus pamoja_sht3x_max_measurement_micros(uint8_t repeatability, uint32_t *out_micros);
// Returns how long an SHT3x measurement typically takes at a repeatability.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_micros` set, or
// [`PamojaStatus::InvalidArgument`] if the code is out of range.
//
// # Safety
//
// `out_micros` must point to a writable `uint32_t`.
PamojaStatus pamoja_sht3x_typical_measurement_micros(uint8_t repeatability, uint32_t *out_micros);
// Returns the gap between SHT3x periodic measurements at a rate.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_micros` set, or
// [`PamojaStatus::InvalidArgument`] if the code is out of range.
//
// # Safety
//
// `out_micros` must point to a writable `uint32_t`.
PamojaStatus pamoja_sht3x_interval_micros(uint8_t rate, uint32_t *out_micros);
// Computes the CRC-8 an SCD4x appends to every data word.
//
// # Returns
//
// The checksum over `data`, or 0 if the pointer is null with a non-zero length.
//
// # Safety
//
// `data` must point to at least `data_len` readable bytes, or be null when
// `data_len` is 0.
uint8_t pamoja_scd4x_crc(const uint8_t *data, uintptr_t data_len);
// Reads a CRC-checked three-byte SCD4x word frame.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_word` set, or
// [`PamojaStatus::Codec`] if the CRC does not match.
//
// # Safety
//
// `frame` must point to at least `frame_len` readable bytes, and `out_word` must
// point to a writable `uint16_t`.
PamojaStatus pamoja_scd4x_word(const uint8_t *frame, uintptr_t frame_len, uint16_t *out_word);
// Builds the three bytes an SCD4x sends for a word: the word then its CRC.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the three bytes written to `out_bytes`,
// or [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least three writable bytes.
PamojaStatus pamoja_scd4x_word_frame(uint16_t value, uint8_t *out_bytes);
// Builds the two bytes that address an SCD4x command, most significant first.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the two bytes written to `out_bytes`, or
// [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least two writable bytes.
PamojaStatus pamoja_scd4x_command_frame(uint16_t command, uint8_t *out_bytes);
// Builds the five bytes that write a word to an SCD4x: command, word, CRC.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the five bytes written to `out_bytes`,
// or [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least five writable bytes.
PamojaStatus pamoja_scd4x_write_frame(uint16_t command, uint16_t value, uint8_t *out_bytes);