bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Sensing.cs


    /// <summary>
    /// Reads a CRC-checked three-byte SHT3x word frame. # Returns [PamojaStatus::Ok] on
    /// success, with *out_word set, or [PamojaStatus::Codec] if the CRC does not match. #
    /// Safety frame must point to at least frame_len readable bytes, and out_word must
    /// point to a writable uint16_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_word(
        ReadOnlySpan<byte> frame,
        nuint frameLen,
        out ushort outWord);

    /// <summary>
    /// Builds the three bytes an SHT3x sends for a word: the word then its CRC. # Returns
    /// [PamojaStatus::Ok] on success, with the three bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least three writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_word_bytes(
        ushort value,
        Span<byte> outBytes);

    /// <summary>
    /// Parses and CRC-checks a six-byte SHT3x measurement frame. # Returns
    /// [PamojaStatus::Ok] on success, with *out_measurement filled in, or
    /// [PamojaStatus::Codec] if either word fails its checksum, which means the read was
    /// corrupted on the bus and should be repeated. # Safety frame must point to at least
    /// frame_len readable bytes, and out_measurement must point to a writable
    /// PamojaSht3xMeasurement.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_parse_measurement(
        ReadOnlySpan<byte> frame,
        nuint frameLen,
        out PamojaSht3xMeasurement outMeasurement);

    /// <summary>
    /// Builds the six bytes an SHT3x sends for a pair of raw words. # Returns
    /// [PamojaStatus::Ok] on success, with the six bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least six writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_measurement_bytes(
        ushort temperatureRaw,
        ushort humidityRaw,
        Span<byte> outBytes);

    /// <summary>
    /// Converts a raw SHT3x temperature word to milli-degrees Celsius. # Returns The
    /// temperature, exact in integer arithmetic.
    /// </summary>
    [LibraryImport(Library)]
    public static partial int pamoja_sht3x_milli_celsius(ushort raw);

    /// <summary>Converts a raw SHT3x temperature word to degrees Celsius. # Returns The temperature.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_sht3x_celsius(ushort raw);

    /// <summary>
    /// Converts a raw SHT3x temperature word to milli-degrees Fahrenheit. # Returns The
    /// temperature, exact in integer arithmetic.
    /// </summary>
    [LibraryImport(Library)]
    public static partial int pamoja_sht3x_milli_fahrenheit(ushort raw);

    /// <summary>
    /// Converts a raw SHT3x temperature word to degrees Fahrenheit. # Returns The
    /// temperature.
    /// </summary>
    [LibraryImport(Library)]
    public static partial float pamoja_sht3x_fahrenheit(ushort raw);

    /// <summary>
    /// Converts a raw SHT3x humidity word to milli-percent. # Returns The relative
    /// humidity, exact in integer arithmetic.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_sht3x_milli_percent(ushort raw);

    /// <summary>
    /// Converts a raw SHT3x humidity word to a relative humidity percentage. # Returns The
    /// relative humidity.
    /// </summary>
    [LibraryImport(Library)]
    public static partial float pamoja_sht3x_relative_humidity(ushort raw);

    /// <summary>
    /// Builds the SHT3x temperature word that decodes to a temperature. # Returns The raw
    /// word, saturating at the ends of the part's range.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_sht3x_temperature_raw_from_milli_celsius(int milliCelsius);

    /// <summary>
    /// Builds the SHT3x temperature word that decodes to a temperature in Celsius. #
    /// Returns The raw word, saturating at the ends of the part's range.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_sht3x_temperature_raw_from_celsius(float celsius);

    /// <summary>
    /// Builds the SHT3x temperature word that decodes to a temperature in Fahrenheit. #
    /// Returns The raw word, saturating at the ends of the part's range.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_sht3x_temperature_raw_from_milli_fahrenheit(int milliFahrenheit);

    /// <summary>
    /// Builds the SHT3x humidity word that decodes to a relative humidity. # Returns The
    /// raw word, saturating at full scale.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_sht3x_humidity_raw_from_milli_percent(uint milliPercent);

    /// <summary>
    /// Builds the SHT3x humidity word that decodes to a relative humidity percentage. #
    /// Returns The raw word, saturating at full scale.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_sht3x_humidity_raw_from_relative_humidity(float percent);

    /// <summary>
    /// Parses and CRC-checks a three-byte SHT3x status frame. # Returns [PamojaStatus::Ok]
    /// on success, with *out_status filled in, or [PamojaStatus::Codec] if the CRC does not
    /// match. # Safety frame must point to at least frame_len readable bytes, and
    /// out_status must point to a writable PamojaSht3xStatus.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_parse_status(
        ReadOnlySpan<byte> frame,
        nuint frameLen,
        out PamojaSht3xStatus outStatus);

    /// <summary>
    /// Splits an SHT3x status word into its flags. # Returns [PamojaStatus::Ok], with
    /// *out_status filled in. Every word decodes, so this fails only on a null pointer. #
    /// Safety out_status must point to a writable PamojaSht3xStatus.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_status_from_bits(
        ushort bits,
        out PamojaSht3xStatus outStatus);

    /// <summary>
    /// Builds the three bytes an SHT3x sends for a status word, CRC last. # Returns
    /// [PamojaStatus::Ok] on success, with the three bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least three writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_status_bytes(
        ushort bits,
        Span<byte> outBytes);

    /// <summary>
    /// Returns the SHT3x single-shot command for a repeatability and clock mode. # Returns
    /// [PamojaStatus::Ok] on success, with *out_command set, or
    /// [PamojaStatus::InvalidArgument] if repeatability is not 0, 1, or 2. # Safety
    /// out_command must point to a writable uint16_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_single_shot(
        byte repeatability,
        [MarshalAs(UnmanagedType.U1)] bool clockStretching,
        out ushort outCommand);

    /// <summary>
    /// Returns the SHT3x periodic-mode command for a repeatability and rate. # Returns
    /// [PamojaStatus::Ok] on success, with *out_command set, or
    /// [PamojaStatus::InvalidArgument] if either code is outside its range. # Safety
    /// out_command must point to a writable uint16_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_periodic(
        byte repeatability,
        byte rate,
        out ushort outCommand);

    /// <summary>
    /// Returns how long an SHT3x measurement may take at a repeatability. # Returns
    /// [PamojaStatus::Ok] on success, with *out_micros set to the datasheet's worst case,
    /// or [PamojaStatus::InvalidArgument] if the code is out of range. # Safety out_micros
    /// must point to a writable uint32_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_max_measurement_micros(
        byte repeatability,
        out uint outMicros);

    /// <summary>
    /// Returns how long an SHT3x measurement typically takes at a repeatability. # Returns
    /// [PamojaStatus::Ok] on success, with *out_micros set, or
    /// [PamojaStatus::InvalidArgument] if the code is out of range. # Safety out_micros
    /// must point to a writable uint32_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_typical_measurement_micros(
        byte repeatability,
        out uint outMicros);

    /// <summary>
    /// Returns the gap between SHT3x periodic measurements at a rate. # Returns
    /// [PamojaStatus::Ok] on success, with *out_micros set, or
    /// [PamojaStatus::InvalidArgument] if the code is out of range. # Safety out_micros
    /// must point to a writable uint32_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sht3x_interval_micros(
        byte rate,
        out uint outMicros);

    /// <summary>
    /// Computes the CRC-8 an SCD4x appends to every data word. # Returns The checksum over
    /// data, or 0 if the pointer is null with a non-zero length. # Safety data must point
    /// to at least data_len readable bytes, or be null when data_len is 0.
    /// </summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_scd4x_crc(
        ReadOnlySpan<byte> data,
        nuint dataLen);

    /// <summary>
    /// Reads a CRC-checked three-byte SCD4x word frame. # Returns [PamojaStatus::Ok] on
    /// success, with *out_word set, or [PamojaStatus::Codec] if the CRC does not match. #
    /// Safety frame must point to at least frame_len readable bytes, and out_word must
    /// point to a writable uint16_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_word(
        ReadOnlySpan<byte> frame,
        nuint frameLen,
        out ushort outWord);

    /// <summary>
    /// Builds the three bytes an SCD4x sends for a word: the word then its CRC. # Returns
    /// [PamojaStatus::Ok] on success, with the three bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least three writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_word_frame(
        ushort value,
        Span<byte> outBytes);

    /// <summary>
    /// Builds the two bytes that address an SCD4x command, most significant first. #
    /// Returns [PamojaStatus::Ok] on success, with the two bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least two writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_command_frame(
        ushort command,
        Span<byte> outBytes);

    /// <summary>
    /// Builds the five bytes that write a word to an SCD4x: command, word, CRC. # Returns
    /// [PamojaStatus::Ok] on success, with the five bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least five writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_write_frame(
        ushort command,
        ushort value,
        Span<byte> outBytes);
